src/grammar/document/snapshots/yaml_parser__grammar__document__tests__document_directive-10.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\u{feff}\\t# comment\")"
---
- token: byte_order_mark
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: separator
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 4
      line: 0
      column: 4
- token: comment
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 13
      line: 0
      column: 13
- value:
    version: ~
    tags: {}

