src/grammar/document/snapshots/yaml_parser__grammar__document__tests__document_directive-5.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"# comment\")"
---
- token: comment
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 9
      line: 0
      column: 9
- value:
    version: ~
    tags: {}

