src/grammar/document/snapshots/yaml_parser__grammar__document__tests__document_directive-6.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\t# comment\")"
---
- token: separator
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: comment
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 10
      line: 0
      column: 10
- value:
    version: ~
    tags: {}

