src/grammar/document/snapshots/yaml_parser__grammar__document__tests__document_directive.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\")"
---
- value:
    version: ~
    tags: {}

